<resources>
    <string name="app_name">Sudoo</string>

    <string name="appbar_scrolling_view_behavior" translatable="false">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>

    <string name="facebook_app_id">6161985857254099</string>
    <string name="facebook_client_token">10e127048d1937c440d0a55941d08f28</string>

    <string name="title_activity_splash">SplashActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sign_in">Đăng nhập</string>
    <string name="sign_up">Đăng ký</string>
    <string name="phone_number">Số điện thoại</string>
    <string name="password">Mật khẩu</string>
    <string name="submit">Gửi</string>
    <string name="confirm_password">Xác nhận mật khẩu</string>
    <string name="invalid_phone_number">Số điện thoại không khả dụng</string>
    <string name="forgot_password"><u>Quên mật khẩu?</u></string>
    <string name="error">Lỗi</string>
    <string name="otp_authen">OTP Authentication</string>
    <string name="otp_authen_description">Chúng tôi đã gửi mã xác thực\nđến điện thoại của bạn</string>
    <string name="resend_otp">Gửi lại OTP</string>
    <string name="not_receive_otp">Không nhận otp?</string>
    <string name="unexpected_error">Lỗi không mong muốn</string>
    <string name="discovery">Khám phá</string>
    <string name="home">Trang chủ</string>
    <string name="promotion">Khuyến mại</string>
    <string name="order">Đơn hàng</string>
    <string name="account">Tài khoản</string>
    <string name="search">Tìm kiếm</string>
    <string name="categories">Danh mục</string>
    <string name="choose_the">Chọn</string>
    <string name="food_that_you_love">Food that you love</string>
    <string name="image_for_user">image for user</string>
    <string name="image_for_title">image for title</string>
    <string name="distance">%.2fkm</string>
    <string name="user">Cá nhân</string>
    <string name="user_title">Cá nhân</string>
    <string name="user_info">Thông tin người dùng</string>
    <string name="label_user_name">Tên đăng nhập</string>
    <string name="full_name">Họ và tên</string>
    <string name="required">* Bắt buộc</string>
    <string name="label_password">Mật khẩu</string>
    <string name="label_gender">Giới tính</string>
    <string name="label_phonenumber">Số điện thoại</string>
    <string name="label_province">Thành phố/ Tỉnh</string>
    <string name="label_district">Quận/ Huyện</string>
    <string name="label_ward">Phường/ Xã</string>
    <string name="label_email">Email</string>
    <string name="label_address">Địa chỉ</string>
    <string name="label_dob">Ngày sinh</string>
    <string name="label_bank">Ngân hàng liên kết</string>
    <string name="label_intro">Giới thiệu</string>
    <string name="log_out">Đăng xuất</string>
    <string name="update">Cập nhật</string>
    <string name="more">more...</string>
    <string name="payment_method">Phương thức thanh toán</string>
    <string name="payment">Thanh toán</string>
    <string name="order_now">Đặt hàng</string>
    <string name="sum_payment">Tổng thanh toán</string>
    <string name="informationUser">Nguyễn Văn A | (+84) 12 345 678\nSố nhà xx ngõ xx\nQuận Hà Đông, Phường Mộ Lao, Hà Nội</string>
    <string name="title_receive_item">Địa chỉ nhận hàng</string>
    <string name="delivery_form">Hình Thức Giao Hàng</string>
    <string name="voucher">Voucher</string>
    <string name="total_money">Tổng tiền hàng:</string>
    <string name="order_code">Mã đơn hàng</string>
    <string name="choose_or_enter_voucher">Chọn hoặc nhập mã</string>
    <string name="total_delivery">Tổng phí tiền vận chuyển:</string>
    <string name="delivery_fee">Phí vận chuyển:</string>
    <string name="total_money_format">Tổng tiền (%s sản phẩm):</string>
    <string name="total_payment">Tổng tiền thanh toán:</string>
    <string name="choose_payment_method">Chọn phương thức\nthanh toán</string>
    <string name="agree">Đồng ý</string>
    <string name="edit_user_title">Sửa hồ sơ</string>
    <string name="edit_label">Sửa</string>
    <string name="consumer">Thành viên</string>
    <string name="staff">Nhân viên</string>
    <string name="choose_province">Chọn Thành phố/ Tỉnh</string>
    <string name="choose_district">Chọn Quận/ Huyện</string>
    <string name="choose_ward">Chọn Phường/ Xã</string>
    <string name="not_found_product">Không tìm thấy sản phẩm</string>
    <string name="cart">Giỏ hàng</string>
    <string name="buy_now">Mua hàng</string>
    <string name="total_price">Tổng tiền: %s</string>
    <string name="delete">Xóa</string>
    <string name="recommend_for_you">Gợi ý cho bạn</string>
    <string name="search_in">Tìm kiếm trong %s</string>
    <string name="received_date">Dự kiến nhận vào ngày %s</string>
    <string name="default_notification_channel_id">PROMOTION-NOTIFICATION-CHANNEL-ID</string>
    <string name="discount">Giảm giá</string>
    <string name="order_detail">Chi tiết đơn hàng</string>
    <string name="rate">Đánh giá</string>
    <string name="product_description">Mô tả sản phẩm</string>
    <string name="product_reviews">Đánh giá sản phẩm</string>
    <string name="total_comment">(%s Đánh giá)</string>
    <string name="have_not_yet_review">(Chưa có đánh giá)</string>
    <string name="load_more_comment">Xem thêm %s đánh giá</string>
    <string name="send">Gửi</string>
    <string name="review_product">Đánh giá sản phẩm</string>
    <string name="my_review">Đánh giá của tôi</string>
    <string name="not_yet_review">Chưa đánh giá</string>
    <string name="reviewed">Đã đánh giá</string>
    <string name="review">Đánh giá</string>
    <string name="product_brand">Thương hiệu: %s</string>
    <string name="sku_label">SKU: %s</string>
    <string name="product_quality">Chất lượng\nsản phẩm</string>
    <string name="bad">Tệ</string>
    <string name="unsatisfied">Không hài lòng</string>
    <string name="normal">Bình thường</string>
    <string name="satisfied">Hài lòng</string>
    <string name="great">Tuyệt vời</string>
    <string name="take_image">Chụp ảnh</string>
    <string name="pick_image">Chọn ảnh</string>
    <string name="comment_product">Nhận xét sản phẩm</string>
    <string name="remain">Còn lại: %s</string>
    <string name="contact">Liên hệ</string>
    <string name="add_to_cart">Thêm vào giỏ</string>
    <string name="continue_order">Tiếp tục</string>
    <string name="add_to_cart_success">Đã thêm vào giỏ</string>
    <string name="payment_success">Thanh toán thành công</string>
    <string name="payment_fail">Thanh toán thất bại</string>
    <string name="empty_cart">Bạn chưa có sản phẩm nào trong giỏ</string>
    <string name="go_to_buy">Mua sắm ngay</string>
    <string name="payment_result_success_description">Thanh toán thành công\nĐơn hàng của bạn đang được xử lý.</string>
    <string name="payment_result_fail_description">Thanh toán thất bại\nĐơn hàng của bạn đã bị hủy.</string>
    <string name="continue_buy">Tiếp tục mua sắm</string>
    <string name="check_order">Kiểm tra đơn hàng</string>
    <string name="final_price">Thành tiền:</string>
    <string name="received_order">Đã nhận được hàng</string>
    <string name="received_order_description">Vui lòng chỉ nhấn \"Đã nhận được hàng\" khi đơn hàng đã được giao đến bạn và sản phẩm nhận được không có vấn đề nào.</string>
    <string name="review_description">Thực hiện đánh giá để chúng tôi có thể phục vụ bạn tốt hơn.</string>

    <string name="prepare">Chờ xác nhận</string>

    <string name="ready">Chờ lấy hàng</string>

    <string name="take_order">Chờ giao hàng</string>
    <string name="shipping">Chờ giao hàng</string>
    <string name="delivered">Chờ giao hàng</string>

    <string name="received">Đã giao</string>

    <string name="canceled">Đã hủy</string>

    <string name="total_product">%d sản phẩm</string>
    <string name="order_info">Thông tin đơn hàng</string>
    <string name="order_time">Thời gian đặt hàng</string>
    <string name="payment_time">Thời gian thanh toán</string>
    <string name="received_time">Thời gian nhận hàng</string>
    <string name="have_not_yet_payment">Chưa thanh toán</string>
    <string name="require_device">Sceneform yêu cầu OpenGL ES %s hoặc cao hơn</string>
    <string name="device_not_supported">Thiết bị không hỗ trợ</string>
    <string name="initializing">Đang khởi tạo…</string>
    <string name="cancel">Hủy</string>
</resources>